[package]
name = "bevy-spring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Bevy
bevy = { version = "0.11.0", default-features = false, features = [ 
    # Bevy functionality:
    #"bevy_asset",           # Assets management
    #"bevy_scene",          # Scenes management
    #"bevy_gilrs",          # Gamepad input support
    #"bevy_audio",           # Builtin audio
    #"bevy_winit",           # Window management
    #"animation",            # Animation support
    #"x11",                 # Linux: Support X11 windowing system
    #"wayland",             # Linux: Support Wayland windowing system
    #"filesystem_watcher",   # Asset hot-reloading
    #"subpixel_glyph_atlas", # Subpixel antialiasing for text/fonts
    #"serialize",           # Support for `serde` Serialize/Deserialize

    #Bevy Render
    #"bevy_render",
    #"bevy_core_pipeline",
    #"bevy_sprite",
    #"bevy_text",
    #"bevy_ui",

    #File formats
    #"jpeg",
    #"png",
    #"mp3",
    #"wav",
] }

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3

[profile.release.package."*"]
opt-level = 3